--- a/style/05-Components/_login.scss
+++ b/style/05-Components/_login.scss
@@ -10,5 +10,9 @@
         }
     }
 
+    .footer {
+        margin: 10rem auto 0;
+    }
+
 }
 
