--- a/style/05-Components/_register.scss
+++ b/style/05-Components/_register.scss
@@ -10,4 +10,8 @@
             margin: 2rem auto 5rem;
         }
     }
+
+    .footer {
+        margin: 5rem auto 0;
+    }
 }
