--- a/style/05-Components/_root.scss
+++ b/style/05-Components/_root.scss
@@ -1,5 +1,6 @@
 .root {
     position: relative;
+    z-index: -997;
     display: grid;
     grid-template-rows: 1fr 5fr;
     padding: 0px 20px 0px 10%;
@@ -22,4 +23,5 @@
     width: 100%;
     height: 50%;
     opacity: 0.3;
+    z-index: -998;
 }
